Refactored project and vote service